--- a/diagnostico.html
+++ b/diagnostico.html
@@ -29,14 +29,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">
-              <span class="badge pull-right">42</span>
+            <li class="active"><a href="meus_carros.html">
+              <span class="badge pull-right">2</span>
               Meus Carros
             </a></li>
-            <li class="active"><a href="#">Adicionar Carro</a></li>
-            <li><a href="#">Minhas Visitas</a></li>
-            <li><a href="#">Agendar Visita</a></li>
-            <li><a href="#">Rotas Alternativas</a></li>
+            <li ><a href="novo_carro.html">Adicionar Carro</a></li>
+            <li><a href="index.html">Minhas Visitas</a></li>
+            <li><a href="agenda_visitas.html">Agendar Visita</a></li>
+            <li><a href="rotas_alternativas.html">Rotas Alternativas</a></li>
 
           </ul>
 
