--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
               Meus Carros
             </a></li>
             <li><a href="novo_carro.html">Adicionar Carro</a></li>
-            <li class="active"><a href="#">
-              <span class="badge pull-right badge-warning">4</span>
+            <li class="active"><a href="index.html">
+              <span class="badge pull-right badge-warning">3</span>
               Minhas Visitas</a></li>
             <li><a href="agenda_visitas.html">Agendar Visita</a></li>
-            <li><a href="#">Rotas Alternativas</a></li>
+            <li><a href="rotas_alternativas.html">Rotas Alternativas</a></li>
 
           </ul>
 
