--- a/meus_carros.html
+++ b/meus_carros.html
@@ -57,7 +57,7 @@
               <span class="badge pull-right alert-danger">4</span>
               <span>Fluence</span>
             </a>
-            <a href="#" class="list-group-item">
+            <a href="diagnostico.html" class="list-group-item">
               <h4 class="list-group-item-heading">BTS-1298</h4>
               <span>Clio</span>
             </a>
