--- a/meus_carros.html
+++ b/meus_carros.html
@@ -39,7 +39,7 @@
 
               Minhas Visitas</a></li>
             <li><a href="agenda_visitas.html">Agendar Visita</a></li>
-            <li><a href="#">Rotas Alternativas</a></li>
+            <li><a href="rotas_alternativas">Rotas Alternativas</a></li>
 
           </ul>
 
