--- a/rotas_alternativas.html
+++ b/rotas_alternativas.html
@@ -34,11 +34,11 @@
               Meus Carros
             </a></li>
             <li><a href="novo_carro.html">Adicionar Carro</a></li>
-            <li><a href="#">
+            <li><a href="index.html">
               <span class="badge pull-right badge-warning">4</span>
               Minhas Visitas</a></li>
             <li><a href="agenda_visitas.html">Agendar Visita</a></li>
-            <li class="active"><a href="#">Rotas Alternativas</a></li>
+            <li class="active"><a href="rotas_alternativas.html">Rotas Alternativas</a></li>
 
           </ul>
 
@@ -49,7 +49,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="google-maps">
 
            <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d14629.515803922906!2d-46.645615917197304!3d-23.554829664490423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e6!4m5!1s0x94ce5852fc540adf%3A0x44929a868f645e2b!2zQW5oYW5nYWJhw7osIENvbnNvbGHDp8OjbywgU8OjbyBQYXVsbw!3m2!1d-23.547915999999997!2d-46.639323999999995!4m5!1s0x94ce59a00cc9896b%3A0x4d7fa8becba4e40d!2sLiberdade%2C+S%C3%A3o+Paulo+-+SP!3m2!1d-23.5600575!2d-46.6343336!5e0!3m2!1spt-BR!2sbr!4v1411274020532" width="400" height="300" frameborder="0" style="border:0"></iframe>
 
