mostrar dados fakes

--- a/novo_carro.html
+++ b/novo_carro.html
@@ -52,7 +52,7 @@
                     <section style="text-align: center;">
                         <img height="150" width="200" src="img/index-car-image.png">
                     </section>
-                    
+
                     <div class="col-md-6">
                         <p id="pWebApiBasicResultado"></p>
                         <form action="" method="post" class="form-horizontal" role="form">
@@ -78,10 +78,48 @@
                                        for="model">Modelo</label>
                                 <div class="col-md-6">
                                     <select id="ddlModelo" name="modelo" class="form-control">
-                                        <option value="0">--Selecine--</option>
+                                        <option value="0">--Selecione--</option>
                                         <option value="0">Clio - Authentique 1.0 16V</option>
                                         <option value="0">Clio - Expression 1.0 16V</option>
-                                    </select>
+
+                                        <option value="0">Logan - Authentique 1.0 16V</option>
+                                        <option value="0">Logan - Expression 1.0 16V</option>
+                                        <option value="0">Logan - Expression 1.6 8V</option>
+                                        <option value="0">Logan - Dynamique 1.6 8V EASY'R</option>
+                                        <option value="0">Logan - Expression 1.6 8V EASY'R</option>
+                                        <option value="0">Logan - Dynamique 1.6 8V EASY'R</option>
+                                        <option value="0">Sandero  - Authentique 1.0 16V</option>
+                                        <option value="0">Sandero -  Expression 1.0 16V/option>
+                                        <option value="0">Sandero - Expression 1.6 8V</option>
+                                        <option value="0">Sandero - Dynamique 1.6 8V </option>
+                                        <option value="0">Sandero -  Expression 1.6 8V EASY'R</option>
+                                        <option value="0">Sandero -   Dynamique 1.6 8V EASY'R</option>
+                                        <option value="0">Sandero -  Stepway 1.6 8V </option>
+                                        <option value="0">Sandero -  Stepway 1.6 16V Automático</option>
+
+                                        <option value="0">Duster -  1.6 16V</option>
+                                        <option value="0">Duster -  Expression 1.6 16V</option>
+                                        <option value="0">Duster -  Dynamique 1.6 16V</option>
+                                        <option value="0">Duster - Dynamique 2.0 16V</option>
+                                        <option value="0">Duster - Dynamique 2.0 16V 4x4V</option>
+
+                                        <option value="0">Fluence - Dynamique 2.0 16V</option>
+                                        <option value="0">Fluence - Privilège 2.0 16V</option>
+                                        <option value="0">Fluence - GT 2.0 16V Turbo</option>
+                                        <option value="0">Fluence - GT-Line 2.0 16V</option>
+
+                                        <option value="0">Kangoo - 1.6 16V</option>
+
+                                        <option value="0">Master - Chassi Cabine</option>
+                                        <option value="0">Master - Minibus Standard/Escolar L2H2</option>
+                                        <option value="0">Master - Minibus Executive L3H2</option>
+                                        <option value="0">Master - VIP L3H2</option>
+                                        <option value="0">Master - Furgão L1H1</option>
+                                        <option value="0">Master - Grand Furgão L2H2</option>
+                                        <option value="0">Master -  Extra Furgão L3H2</option>
+                                        <option value="0">Master - Vitré L1H1</option>
+                                        <option value="0">Master - Grand Vitré L2H2</option>
+                                        <option value="0">Master -  Extra Vitré L3H2</option>                                    </select>
                                 </div>
 
                             </div>
