--- a/diagnostico.html
+++ b/diagnostico.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="meus_carros.html">
-              <span class="badge pull-right">2</span>
+              <span class="badge pull-right"></span>
               Meus Carros
             </a></li>
             <li ><a href="novo_carro.html">Adicionar Carro</a></li>
