--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a></li>
             <li><a href="novo_carro.html">Adicionar Carro</a></li>
             <li class="active"><a href="index.html">
-              <span class="badge pull-right badge-warning">3</span>
+              <span class="badge pull-right badge-warning">1</span>
               Minhas Visitas</a></li>
             <li><a href="agenda_visitas.html">Agendar Visita</a></li>
             <li><a href="rotas_alternativas.html">Rotas Alternativas</a></li>
@@ -52,30 +52,14 @@
         <div class="col-md-12">
           <div class="list-group">
             <a href="#" class="list-group-item active">
-              <h4 class="list-group-item-heading">BTS-0098</h4>
-              <span>09/09</span>
+              <h4 class="list-group-item-heading">HCK-2014</h4>
+              <span>29/09</span>
               <span>12:00</span>
               <p class="list-group-item-text">
-                Itavema france - Pinheiros
+                Concessionária Rio de Janeiro
               </p>
             </a>
 
-            <a href="#" class="list-group-item ">
-              <h4 class="list-group-item-heading">KAR-0013</h4>
-              <span>09/09</span>
-              <span>12:00</span>
-              <p class="list-group-item-text">
-                Itavema france - itaim
-              </p>
-            </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">ALV-1114</h4>
-              <span>09/09</span>
-              <span>12:00</span>
-              <p class="list-group-item-text">
-                Itavema france - Faria Lima
-              </p>
-            </a>
           </div>
         </div>
       </div>
