--- a/agenda_visitas.html
+++ b/agenda_visitas.html
@@ -45,7 +45,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-    <p class="header">Agendar visita</p>
 
   <div class="row">
     <div class="col-md-6">
@@ -65,10 +64,7 @@
                         <img class="img-attribute" src="img/clock.png">
                         <input  class="form-control input-md input-novo-carro" type="text"/>
                     </div>
-                   <div class="col-md-4">
-                        <img class="img-attribute" src="img/dollar.png" >
-                        <input  class="form-control input-md input-novo-carro" type="text"/>
-                    </div>
+
                      <div class="col-md-4">
                         <img class="img-attribute" src="img/info.png">
                         <input  class="form-control input-md input-novo-carro" type="text"/>
@@ -77,7 +73,7 @@
                   <div style="text-align: left;" class="col-md-4">
                       <div class="dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-                          Selecionar concessionaria mais próxima
+                          Selecionar concessionaria
                           <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
@@ -87,7 +83,7 @@
                         </ul>
                       </div>
                     </div>
-                <button class="btn btn-registrar-carro btn-primary">Agendar visita</button>
+                <button id= "btn_registrar" class="btn btn-registrar-carro btn-primary">Agendar visita</button>
             </div>
         </div>
     </section>
@@ -104,6 +100,12 @@
     </div>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+      <script>
+        $("#btn_registrar").on('click', function () {
+           window.location.assign("index.html");
+         });
+      </script>
 
   </body>
 </html>
