--- a/registrar.html
+++ b/registrar.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">IRodizio</a>
+                <a class="navbar-brand" href="#">IRodizio :: Criar Conta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -26,7 +26,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Login</h2>
 
                 <div class="row">
                     <div class="col-md-6">
@@ -78,8 +77,7 @@
                                         Registrar
                                     </button>
 
-                                    <hr />
-                                    <a href='login.html' class="btn btn-default  btn-large"> Login </a>
+
                                 </div>
                             </div>
 
@@ -135,7 +133,7 @@
                     }
                 },
                 success: function (data) {
-                    window.location.assign("index.html");
+                    window.location.assign("novo_carro.html");
                 }
             });
 
