--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="col-md-12">
           <div class="list-group">
             <a href="#" class="list-group-item active">
-              <h4 class="list-group-item-heading">HCK-2014</h4>
+              <h4 class="list-group-item-heading">BTS-0098</h4>
               <span>29/09</span>
               <span>12:00</span>
               <p class="list-group-item-text">
